include_directories("${ROOT_DIR}/3rd/asio-1-16-1/asio/include")
include_directories("${ROOT_DIR}/src/gsio/include")

add_executable(asio_tcp_sync_server asio_tcp_sync_server.cpp)
if(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(asio_tcp_sync_server pthread)
endif()

add_executable(asio_tcp_async_server asio_tcp_async_server.cpp)
if(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(asio_tcp_async_server pthread)
endif()

add_executable(gsio_tcp_server gsio_tcp_server.cpp)
if(UNIX)
  find_package(Threads REQUIRED)
  target_link_libraries(gsio_tcp_server pthread)
endif()